Fixed overlays in IE overlapping offcanvas section (fixes #141 #140)

--- a/engines/common/nucleus/css-compiled/nucleus.css
+++ b/engines/common/nucleus/css-compiled/nucleus.css
@@ -1450,7 +1450,7 @@ th {
   left: 0;
   z-index: -1;
   opacity: 0;
-  position: fixed;
+  position: absolute;
   -webkit-transition: opacity 0.3s ease-out, z-index 0.1s ease-out;
   -moz-transition: opacity 0.3s ease-out, z-index 0.1s ease-out;
   transition: opacity 0.3s ease-out, z-index 0.1s ease-out;
@@ -1929,7 +1929,7 @@ input[type="submit"] {
 /* line 34, engines/common/nucleus/scss/nucleus/_offcanvas.scss */
 .g-offcanvas-open .g-nav-overlay {
   z-index: 5;
-  position: fixed;
+  position: absolute;
   opacity: 1;
   height: 100%;
 }
