--- a/engines/common/nucleus/scss/nucleus/_nav.scss
+++ b/engines/common/nucleus/scss/nucleus/_nav.scss
@@ -246,7 +246,7 @@
     left: 0;
     z-index: -1;
     opacity: 0;
-    position: fixed;
+    position: absolute;
     @include transition(opacity .3s ease-out, z-index .1s ease-out);
 }
 
